--- a/PDF/my_folder/chapter2.tex
+++ b/PDF/my_folder/chapter2.tex
@@ -153,43 +153,43 @@ LW-криптография используется для обеспечени
 
 В дело исследования блочных легковесных шифров внесли значительный вклад работы~\cite{src30,src27}. Легковесные блочные шифры являются одним из наиболее динамично развивающихся разделов низкоресурсной криптографии. Исследования идут по двум направлениям: создание оптимальных реализаций алгоритмов общего назначения и создание новых алгоритмов, нацеленных именно на использование в низкоресурсных устройствах.
 
-\paragraph{Криптоалгоритмы общего назначения}. \newline
+Ниже будут отдельно рассмотрены \textit{блочные шифры общего назначения} и \textit{легковесные блочные шифры}.
 
-Одним из лучших на данный момент блочных шифров является алгоритм \textbf{AES} (Rijndael). Он оперирует 128-битными блоками данных и 128-, 192- и 256-битными ключами, производя 10, 12 и 14 раундов шифрования соответственно.
+\paragraph{Блочные шифры общего назначения.} Одним из лучших на данный момент блочных шифров является алгоритм \textit{AES (Rijndael)}. Он оперирует 128-битными блоками данных и 128-, 192- и 256-битными ключами, производя 10, 12 и 14 раундов шифрования соответственно.
 
 Помимо высокой криптостойкости, он является весьма производительным. Существует его программная реализация с производительностью порядка 7 процессорных тактов на байт~\cite{src31} на стандартных ЦП. Добавление специальной процессорной инструкции для этого алгоритма позволило достичь производительности примерно 0.7 тактов на байт~\cite{src32}.  Помимо этого, стоит отметить низкое потребление памяти.
 
 Он, однако, требует достаточно большого размера микросхемы, порядка 250 000 GE  для достижения максимальной скорости (до 70 Гб/сек)~\cite{src33}. Наиболее компактная последовательная реализация требует 2400 GE  и имеет производительность 226 циклов на блок~\cite{src34}. Это значительно лучше, и может подойти для многих устройств, даже очень простых. Тем не менее, «ультралегким» алгоритмом, т. е. оптимальная реализация которого требует менее 1000 GE, его все-таки назвать нельзя.
 
-\textbf{DES}. Данный алгоритм также является весьма известным. Длина его ключа значительно меньше, чем у AES (56 бит), что означает меньшую стойкость. Также он был взломан методом линейного криптоанализа~\cite{src35}. В системах общего назначения (не легковесных) он применяется, в основном, в виде Triple DES, то есть троекратное шифрование с тремя ключами. Также существует вариация DESX, работающая с 184-битным ключом при таком же размере блока и числе раундов, как у DES. Наиболее компактные реализации DES и DESX требуют 2309 GE и 1848 GE соответственно~\cite{src36}.
+\textit{DES}. Данный алгоритм также является весьма известным. Длина его ключа значительно меньше, чем у AES (56 бит), что означает меньшую стойкость. Также он был взломан методом линейного криптоанализа~\cite{src35}. В системах общего назначения (не легковесных) он применяется, в основном, в виде\textit{ Triple DES}, то есть троекратное шифрование с тремя ключами. Также существует вариация \textit{DESX}, работающая с 184-битным ключом при таком же размере блока и числе раундов, как у DES. Наиболее компактные реализации DES и DESX требуют 2309 GE и 1848 GE соответственно~\cite{src36}.
 
-\paragraph{Легковесные криптоалгоритмы}. \newline
+\paragraph{Легковесные блочные шифры.} Наилучшие лешковесные блочные алгоритмы включены в стандарт~\cite{src26} (часть 2, Block ciphers). Это шифры \textit{PRESENT} и \textit{CLEFIA}.
 
-Наилучшие лешковесные блочные алгоритмы включены в стандарт~\cite{src26} (часть 2, Block ciphers). Это шифры PRESENT и CLEFIA.
+\textit{CLEFIA}. Данный алгоритм является очень популярным благодаря существующим очень производительным реализациям. Он оперирует 128-битными блоками с длиной ключа 128, 192 и 256 бит с 18, 22 и 26 раундами, соответственно. Наиболее компактная реализация шифрования требует 2488GE, дешифровки – 2604GE~\cite{src37}. В данной реализации используется технология \textit{Clock Gating}. С точки зрения криптоанализа данная функция является весьма стойкой, существующие не вероятностные атаки лишь немногим лучше, чем полный перебор~\cite{src38}.
 
-\textbf{CLEFIA}. Данный алгоритм является очень популярным благодаря существующим очень производительным реализациям. Он оперирует 128-битными блоками с длиной ключа 128, 192 и 256 бит с 18, 22 и 26 раундами, соответственно. Наиболее компактная реализация шифрования требует 2488GE, дешифровки – 2604GE~\cite{src37}. В данной реализации используется технология Clock Gating. С точки зрения криптоанализа данная функция является весьма стойкой, существующие не вероятностные атаки лишь немногим лучше, чем полный перебор~\cite{src38}.
+\textit{PRESENT}. Данный шифр использует 80- и 128-битные ключи для шифрования данных 64-битными блоками в 31 раунд. Он, вообще говоря, не совсем укладывается в границу, т. к. требует 1030 GE~\cite{src39}. Но даже такой результат явился почти революционным. Его удалось достичь за счет последовательной архитектуры – это первый шифр с такой архитектурой. Еще одним улучшением является уменьшение числа S-боксов с 8 (обычное количество для блочных шифров) до 1.
 
-\textbf{PRESENT}. Данный шифр использует 80- и 128-битные ключи для шифрования данных 64-битными блоками в 31 раунд. Он, вообще говоря, не совсем укладывается в границу, т. к. требует 1030 GE~\cite{src39}. Но даже такой результат явился почти революционным. Его удалось достичь за счет последовательной архитектуры – это первый шифр с такой архитектурой. Еще одним улучшением является уменьшение числа S-боксов с 8 (обычное количество для блочных шифров) до 1.
+Платой за компактность данного алгоритма является не слишком высокая криптостойкость. Существуют атаки по сторонним каналам~\cite{src40,src41} и атака на связанных ключах~\cite{src42} на 17-раундовую версию данного алгоритма. Существует атака методом \textit{DFA} (differential fault cryptanalysis)~\cite{src43}. Есть дифференциальная атака на 26-раундовую версию~\cite{src44}.
 
-Платой за компактность данного алгоритма является не слишком высокая криптостойкость. Существуют атаки по сторонним каналам~\cite{src40,src41} и атака на связанных ключах~\cite{src42} на 17-раундовую версию данного алгоритма. Существует атака методом DFA (differential fault cryptanalysis)~\cite{src43}. Есть дифференциальная атака на 26-раундовую версию~\cite{src44}.
-
-Существуют и еще более компактные шифры. Это Katan (800-1000GE~\cite{src45}), Ktantan (460GE-690GE~\cite{src45}) и другие. Однако такие реализации оперируют ключами очень небольшой длины (32 или 48 бит), что позволяет взломать их простым перебором, либо они уязвимы для других атак. Такие алгоритмы подходят для шифрования не слишком важной информации.
+Существуют и еще более компактные шифры. Это \textit{Katan} (800-1000GE~\cite{src45}), \textit{Ktantan} (460GE-690GE~\cite{src45}) и другие. Однако такие реализации оперируют ключами очень небольшой длины (32 или 48 бит), что позволяет взломать их простым перебором, либо они уязвимы для других атак. Такие алгоритмы подходят для шифрования не слишком важной информации.
 
 \subsubsection{Потоковое шифрование}
 
 Данное направление легковесной криптографии развито слабее, чем блочное шифрование. Основная причина в том, что потоковые шифры направлены главным образом на шифрование больших объемов информации сразу, в то время как легковесные устройства зачастую оперируют пакетами данных небольшого объема. Потоковые шифры часто имеют большое время инициализации и требуют большого количества памяти для хранения внутреннего состояния.
 
-В стандарт~\cite{src26} (часть 3, Stream ciphers) включены два алгоритма. Это \textbf{Enoroco} и \textbf{Trivium}. Помимо закрытого ключа, эти алгоритмы используют также вектор инициализации, являющийся открытым ключом. Они требуют примерно 4900~\cite{src46} и 1300~\cite{src47} тактов процессора на инициализацию, соответственно. Занимаемое место на микросхеме – 4100GE и 2600GE~\cite{src48}.
+В стандарт~\cite{src26} (часть 3, Stream ciphers) включены два алгоритма. Это \textit{Enoroco} и \textit{Trivium}. Помимо закрытого ключа, эти алгоритмы используют также вектор инициализации, являющийся открытым ключом. Они требуют примерно 4900~\cite{src46} и 1300~\cite{src47} тактов процессора на инициализацию, соответственно. Занимаемое место на микросхеме – 4100GE и 2600GE~\cite{src48}.
 
 Алгоритм Trivium является весьма гибким: можно варьировать соотношение между числом логических элементов (GE) и скоростью работы. Наиболее компактная реализация занимает всего 700GE~\cite{src49}. К настоящему времени не известно атак быстрее полного перебора.
 
-\subsubsection{Асимметричное шифрование. Хэширование и ЭЦП}
+\subsubsection{Асимметричное шифрование}
 
 Асимметричное шифрование не слишком подходит для шифрования трафика, передаваемого устройствами интернета вещей. Среди их недостатков выделяется бОльшая длина ключа (~\cite{src50}, стр 673), более низкая скорость шифрования, бОльшие вычислительные ресурсы. В то же время их преимущества (нет необходимости передачи секретного ключа, ключ дешифрования может хранить только одна сторона) диктуют область их применения главным образом как средство распределения систем или аутентификации. Их использование в системах ЭЦП описано выше.
 
-Впрочем, существуют достаточно эффективные реализации асимметричных алгоритмов, которые можно использовать при создании ЭЦП. Например, алгоритм cryptoGPS (GPS – по фамилиям авторов) имеет реализацию, требующую 724 такта (на все шифрование) при размере схемы 2876GE~\cite{src51}. По стойкости она соответствует 80-битному симметричному ключу.
+Впрочем, существуют достаточно эффективные реализации асимметричных алгоритмов, которые можно использовать при создании ЭЦП. Например, алгоритм \textit{cryptoGPS} (GPS – по фамилиям авторов) имеет реализацию, требующую 724 такта (на все шифрование) при размере схемы 2876GE~\cite{src51}. По стойкости она соответствует 80-битному симметричному ключу.
 
-Криптографическое хэширование однозначно не подходит для целей шифрования, так как является односторонним преобразованием: расшифровка хэша априори невозможна, возможно только сравнение хэшей. Впрочем, блочная шифрующая функция может быть интересна с криптографической точки зрения, и может быть использована как примитив при создании нового шифра, в том числе легковесного. Например, на базе алгоритма Present создана легковесная хэш-функция H-Present-128~\cite{src52}.
+\subsubsection{Хэширование и ЭЦП}
+
+Криптографическое хэширование однозначно не подходит для целей шифрования, так как является односторонним преобразованием: расшифровка хэша априори невозможна, возможно только сравнение хэшей. Впрочем, блочная шифрующая функция может быть интересна с криптографической точки зрения, и может быть использована как примитив при создании нового шифра, в том числе легковесного. Например, на базе алгоритма Present создана легковесная хэш-функция \textit{H-Present-128}~\cite{src52}.
 
 Электронная цифровая подпись также не подходит для хэширования, так как использует в своем составе хэш. ЭЦП предназначены для гарантирования достоверности и целостности данных. В этом качестве она вполне может быть использована, о чем написано выше.
 
