--- a/PDF/my_folder/my_biblio.bib
+++ b/PDF/my_folder/my_biblio.bib
@@ -8,6 +8,7 @@
 	year = {2013},
 	title = {Programming Languages — C++},
 	url = { http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2013/n3690.pdf },
+	pagetotal = { 1374 },
 	hyphenation = {english}
 }
 
@@ -231,12 +232,19 @@
 	hyphenation = {english}
 }
 
-@conference{src25,
+@inproceedings{src25,
 	author    = { C. Manifavas and G. Hatzivasilis and K. Fysarakis and K. Rantos }, 
-	title     = { Lightweight Cryptography for Embedded Systems -- A Comparative Analysis },
+	title = {Lightweight Cryptography for Embedded Systems  A Comparative Analysis},
 	year = {2013},
-	organization = {SETOP},
-	hyphenation  = { english }
+	isbn = {9783642545672},
+	publisher = {Springer-Verlag},
+	address = {Berlin, Heidelberg},
+	url = {https://doi.org/10.1007/978-3-642-54568-9_21},
+	doi = {10.1007/978-3-642-54568-9_21},
+	booktitle = {Revised Selected Papers of the 8th International Workshop on Data Privacy Management and Autonomous Spontaneous Security - Volume 8247},
+	pages = {333–349},
+	numpages = {17},
+	hyphenation = {english}
 }
 
 @techreport{src26,
@@ -253,6 +261,7 @@
 	journal  = { Вопросы кибербезопасности },
 	year     = { 2015 },
 	number   = { 1 },
+	pages = {26 - 43},
 	hyphenation = {russian}
 }
 
@@ -491,7 +500,7 @@
 % Chapter 3
 
 @article{src53,
-	author={ Авдошин С. М. and Савельева А. А.},
+	author={ С. М. Авдошин and А. А. Савельева},
 	title={ Криптоанализ и криптография: история противостояния },
 	journal={ Бизнес-информатика },
 	year={ 2009 },
@@ -500,7 +509,7 @@
 }
 
 @article{src54,
-	author={ Тутубалин П.И. and Кирпичников А.П.},
+	author={ П.И. Тутубалин and А.П. Кирпичников},
 	title={ Оценка криптографической стойкости алгоритмов асимметричного шифрования },
 	journal={ Вестник Казанского технологического университета },
 	year={ 2017 },
