PDF: Finished normo- fixes

--- a/PDF/my_folder/my_biblio.bib
+++ b/PDF/my_folder/my_biblio.bib
@@ -35,12 +35,13 @@
 }
 
 @ARTICLE{src3,
-  author   = {Н.Б. Беклемищева and В.Г. Жуков and К.Д. Михайлов },
-  title    = {О некоторых вопросах информационной безопасности медицинских устройств},
-  journal  = {Актуальные проблемы авиации и космонавтики},
-  year     = {2017},
-  number   = {13},
-  hyphenation = {russian}
+	author   = {Н.Б. Беклемищева and В.Г. Жуков and К.Д. Михайлов },
+	title    = {О некоторых вопросах информационной безопасности медицинских устройств},
+	journal  = {Актуальные проблемы авиации и космонавтики},
+	year     = {2017},
+	number   = {13},
+	pages = {191-193},	
+	hyphenation = {russian}
 }
 
 @Online{src4,
@@ -234,7 +235,7 @@
 
 @inproceedings{src25,
 	author    = { C. Manifavas and G. Hatzivasilis and K. Fysarakis and K. Rantos }, 
-	title = {Lightweight Cryptography for Embedded Systems  A Comparative Analysis},
+	title = {Lightweight Cryptography for Embedded Systems -- A Comparative Analysis},
 	year = {2013},
 	isbn = {9783642545672},
 	publisher = {Springer-Verlag},
@@ -261,7 +262,7 @@
 	journal  = { Вопросы кибербезопасности },
 	year     = { 2015 },
 	number   = { 1 },
-	pages = {26 - 43},
+	pages = {26-43},
 	hyphenation = {russian}
 }
 
@@ -301,8 +302,8 @@
 	title     = { Faster and Timing-Attack Resistant AES-GCM },
 	year = {2009},
 	organization = {CHES},
-  	pages        = {1-17},
-  	hyphenation  = { english }
+	pages        = {1-17},
+	hyphenation  = { english }
 }
 
 @conference{src32,
@@ -311,7 +312,7 @@
 	year = {2010},
 	organization = {Inscript},
 	pages        = {1-17},
-  	hyphenation  = { english }
+	hyphenation  = { english }
 }
 
 @conference{src33,
@@ -505,7 +506,8 @@
 	journal={ Бизнес-информатика },
 	year={ 2009 },
 	number   = {2},
-  	hyphenation     = { russian }
+	pages = {3-11},	
+	hyphenation     = { russian }
 }
 
 @article{src54,
@@ -514,6 +516,7 @@
 	journal={ Вестник Казанского технологического университета },
 	year={ 2017 },
 	number   = {10},
+	pages = {94-99},	
 	hyphenation     = { russian }
 }
 
@@ -523,6 +526,7 @@
 	journal={  Вестник ДГТУ },
 	year={ 2015 },
 	number   = {3 (82)},
+	pages = {65-72},	
 	hyphenation     = { russian }
 }
 
@@ -532,6 +536,7 @@
 	journal={ Известия ЮФУ. Технические науки },
 	year={ 2012 },
 	number   = {12 (137)},
+	pages = {136-147},	
 	hyphenation     = { russian }
 }
 
@@ -541,6 +546,7 @@
 	journal={ КИО },
 	year={ 2007 },
 	number   = {6},
+	pages = {3-10},
 	hyphenation     = { russian }
 }
 
@@ -603,6 +609,7 @@
 	journal={  Вестник ЮУрГУ. Серия: Компьютерные технологии, управление, радиоэлектроника },
 	year={ 2012 },
 	number   = {23},
+	pages = {225-227},	
 	hyphenation     = { russian }
 }
 
@@ -647,6 +654,7 @@
 	journal={ Вестник ЮУрГУ. Серия: Компьютерные технологии, управление, радиоэлектроника },
 	year={2013},
 	number   = {1},
+	pages = {84-86},	
 	hyphenation     = {russian},
 }
 
