PDF: - normo-fixes - vectorized plots

--- a/PDF/my_folder/chapter1.tex
+++ b/PDF/my_folder/chapter1.tex
@@ -58,8 +58,8 @@
 
 Главная часть шифра, его сердце – некоторая \textit{трудная} задана, которая используется для гарантии того, что узнать секретное свойство (т. е. обратить шифрующую функцию и получить доступ к зашифрованным данным) очень трудно. Пара примеров трудных задач:
 \begin{itemize}
-	\item Задача факторизации – разложение большого числа на простые множители (используется, например, в алгоритме RSA). В этом случае секретное свойство – факторизуемое число.
-	\item Задача дискретного логарифмирования – обращение функции вида f(x)=a\^x  mod p, где p – большое простое число, a – параметр, подобранный для конкретного p (используется, например, в схеме Эль-Гамаля).
+	\item Задача факторизации – разложение большого числа на простые множители (используется, например, в алгоритме \textit{RSA}). В этом случае секретное свойство – факторизуемое число.
+	\item Задача дискретного логарифмирования – обращение функции вида $f(x)=a^x mod p$, где $p$ – большое простое число, $a$ – параметр, подобранный для конкретного $p$ (используется, например, в схеме Эль-Гамаля).
 \end{itemize}
 
 Однако если будет представлен алгоритм, эффективно решающий трудную задачу (т. е. задача перестанет быть трудной), шифры на ее основе мгновенно устареют. Поэтому поиск трудных задач (и, наоборот, поиски быстро решающих их алгоритмов) является одним из важных направлений криптографии.
