--- a/PDF/my_folder/chapter3.tex
+++ b/PDF/my_folder/chapter3.tex
@@ -46,9 +46,9 @@
 
 Могут быть предложены два способа проведения измерения производительности алгоритмов. Можно либо рассчитать ее через время исполнения отдельных операций (частота процессора известна, задержки и число тактов на исполнение для каждой операции известны), либо же измерить напрямую. По мнению автора, первый подход даст очень низкую точность, либо потребует значительного тестирования или глубоких знаний в устройстве конкретного ЦП. Это связано с тем, что в процессоре имеется масса оптимизаций, которые между собой взаимодействуют. В качестве примера: последовательность команд xor rax rbx;xor rcx rdx займет время, равное не удвоенному времени исполнения xor’а, а лишь чуть дольше одного xor’а. Это связано с внутренней параллелизацией работы процессора. Большое количество разных оптимизаций не позволяет точно определить, как поведут себя операции в конкретной взаимной конфигурации, т. е. в конкретном алгоритме. Впрочем, это тема для отдельного исследования о предсказуемости времени исполнения последовательности процессорных команд.
 
-В данной работе предлагается определять время работы алгоритма с помощью прямого тестирования времени. Случайную (статистическую) погрешность данного измерения можно уменьшить следующим способом. Произвести несколько серий измерений времени шифрования для различного объема шифруемых данных. Чем больше серий и измерений внутри серии, тем лучше. В результате точки на графике зависимости времени шифрования от объема шифруемых данных будут расположены примерно на одной прямой. После чего с помощью метода наименьших квадратов можно восстановить уравнение этой прямой вида y=kx+b. Коэффициент k будет пропускной способностью, а b – задержкой данного алгоритма. Подробнее данный классический метод описан, например, в пособии~\cite{src64}.
+В данной работе предлагается определять время работы алгоритма с помощью прямого тестирования времени. Случайную (статистическую) погрешность данного измерения можно уменьшить следующим способом. Произвести несколько серий измерений времени шифрования для различного объема шифруемых данных. Чем больше серий и измерений внутри серии, тем лучше. В результате точки на графике зависимости времени шифрования от объема шифруемых данных будут расположены примерно на одной прямой. После чего с помощью метода наименьших квадратов можно восстановить уравнение этой прямой вида $y=kx+b$. Коэффициент $k$ будет пропускной способностью, а $b$ – задержкой данного алгоритма. Подробнее данный классический метод описан, например, в пособии~\cite{src64}.
 
-\section{Оценка энергопотребления на ПК} \label{ch3:sec3}
+\section{Оценка мощности энергопотребления на ПК} \label{ch3:sec3}
 
 Оценка энергопотребления реализации алгоритма на ПК является методологически более трудной задачей, чем оценка производительности. Основная причина в том, что на компьютере всегда в многозадачном режиме исполняются различные службы, некоторые из которых потребляют разное количество энергии в разное время. Кроме того, порядок работы служб может зависеть от загрузки ЦП, и даже от энергопотребления (например, ACPI). В результате сложно отличить колебания энергопотребления служб от работы алгоритма. Экспериментальная оценка влияния служб на энергопотребление проведена в работе~\cite{src65}. Единственный способ минимизировать влияние служб на энергопотребление – отключить их.
 
@@ -109,8 +109,6 @@ P_{alg} = \frac{ E_{alg} }{ t_{alg} }.
 \section{Выводы} \label{ch3:conclusion}
 
 В данной главе была описана методология сравнительного тестирования различных криптографических алгоритмов по производительности (времени работы) и по мощности энергопотребления.
-
-\newpage
 
 
 %% Вспомогательные команды - Additional commands
