--- a/PDF/my_folder/summary.tex
+++ b/PDF/my_folder/summary.tex
@@ -22,7 +22,7 @@
 %% Для того, чтобы значения счетчиков корректно отобразились, необходимо скомпилировать файл 2-3 раза
 На \total{mypages}~c.,  
 \formbytotal{myfigures}{рисун}{ок}{ка}{ков},
-\formbytotal{mytables}{таблиц}{у}{ы}{},
+\formbytotal{mytables}{таблиц}{а}{ы}{},
 \formbytotal{myappendices}{приложен}{ие}{ия}{ий}.  
 
 %\noindent
@@ -40,7 +40,7 @@
 
 \total{mypages}~p., 
 \total{myfigures}~figures, 
-\total{mytables}~tables,
+\total{mytables}~table,
 \total{myappendices}~appendices.
 
 %\noindent
