--- a/PDF/my_folder/chapter4.tex
+++ b/PDF/my_folder/chapter4.tex
@@ -42,20 +42,22 @@
 
 Полученные данные (временной ряд 1) для каждой из трех реализаций приводится на рис. 4.1-4.3. Можно видеть, что точки весьма хорошо ложатся на прямую, как и следовало ожидать. В реализациях 1 и 2 первый тест первой серии занимает больше времени, чем следует из теоретической модели. Возможно, это связано с тем, что Windows требуется время, чтобы предоставить все требуемые ресурсы.
 
+
+
 \begin{figure}[ht!] 
-	\includegraphics [scale=0.9] {my_folder/plots//plot1}
+	\includegraphics [scale=1.1] {my_folder/plots/plot1_notitle}
 	\centering
 	\caption{Применение метода для реализации 1} 
 \end{figure}
 
 \begin{figure}[ht!] 
-	\includegraphics [scale=0.9] {my_folder/plots//plot2}
+	\includegraphics [scale=1.1] {my_folder/plots/plot2_notitle}
 	\centering
 	\caption{Применение метода для реализации 2} 
 \end{figure}
 
 \begin{figure}[ht!] 
-	\includegraphics [scale=0.9] {my_folder/plots//plot3}
+	\includegraphics [scale=1.1] {my_folder/plots/plot3_notitle}
 	\centering
 	\caption{Применение метода для реализации 3} 
 \end{figure}
@@ -63,7 +65,7 @@
 Для сравнения, на рис. 4.4 приводятся данные для реализации 1 с увеличенным числом блоков (примерно на порядок). Против ожидания, результаты не исказились: точки по-прежнему соответствуют теоретической модели, причем восстановленные коэффициенты прямой получены почти такие же (см. далее). Это говорит в пользу предложенной методологии: она устойчива к увеличению объема входных данных. Исследовано поведение до объема 600 блоков (9.6 Кб). Дальнейшее увеличение представляется нецелесообразным, так как низкоресурсные устройства обычно не передают пакетов такого большого размера.
 
 \begin{figure}[ht!] 
-	\includegraphics [scale=0.9] {my_folder/plots//plot4}
+	\includegraphics [scale=1.1] {my_folder/plots/plot4_notitle}
 	\centering
 	\caption{Применение метода для реализации 1 (число блоков увеличено)} 
 \end{figure}
